--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -51,14 +51,14 @@ RUN apt-get update && \
     git \
     default-jdk
     
-RUN ls /usr/bin/ | grep "python"
-RUN ln -sf $(which python$PYTHON_VERSION) /usr/bin/python
+#RUN ls /usr/bin/ | grep "python"
+#RUN ln -sf $(which python$PYTHON_VERSION) /usr/bin/python
 
-RUN python --version
+#RUN python --version
 
-RUN python -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip
 
-RUN which python$PYTHON_VERSION && which python && python --version
+#RUN which python$PYTHON_VERSION && which python && python --version
 
 WORKDIR /usr/lib/jvm/default-java/jre/lib
 RUN ln -s ../../lib amd64
@@ -82,9 +82,9 @@ RUN curl https://archive.apache.org/dist/lucene/pylucene/pylucene-$PYLUCENE_VERS
 ENV PREFIX_PYTHON=/usr \
     JCC_JDK=/usr/lib/jvm/default-java \
     ANT=ant \
-    JCC='python -m jcc' \
+    JCC='python3 -m jcc' \
     NUM_FILES=10 \
-    PYTHON=python \
+    PYTHON=python3 \
     NO_SHARED=1
 	
 
@@ -106,11 +106,11 @@ RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
 
 RUN cd "pylucene-$PYLUCENE_VERSION/jcc" && \
     ls -la && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python setup.py build && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python setup.py install && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py build && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py install && \
     cd .. && \
-    make JCC="python -m jcc" ANT=ant PYTHON=python NUM_FILES=8&& \
-    make install JCC="python -m jcc" ANT=ant PYTHON=python NUM_FILES=8 && \
+    make JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8&& \
+    make install JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8 && \
     cd ../../
 
 
@@ -127,8 +127,8 @@ WORKDIR /
 
 
 
-RUN python -m pip install --upgrade pip \
-    && python -m venv --system-site-packages /opt/python/venv/base
+RUN python3 -m pip install --upgrade pip \
+    && python3 -m venv --system-site-packages /opt/python3/venv/base
 
 
 ENV CONDA_DIR /opt/conda
@@ -138,16 +138,16 @@ RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86
 # Put conda in path so we can use conda activate
 ENV PATH=$CONDA_DIR/bin:$PATH
 	
-RUN /opt/python/venv/base/bin/python -m pip install --upgrade pip	
+RUN /opt/python3/venv/base/bin/python3 -m pip install --upgrade pip	
 
-COPY requirements.txt /opt/python/venv/base/
+COPY requirements.txt /opt/python3/venv/base/
 
-RUN /opt/python/venv/base/bin/python -m pip install -v "torch==1.9.0+cu111" "torchvision==0.10.0+cu111" "torchaudio==0.9.0" -f https://download.pytorch.org/whl/torch_stable.html
+RUN /opt/python3/venv/base/bin/python3 -m pip install -v "torch==1.9.0+cu111" "torchvision==0.10.0+cu111" "torchaudio==0.9.0" -f https://download.pytorch.org/whl/torch_stable.html
 
-RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
+RUN /opt/python3/venv/base/bin/python3 -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
 
-RUN /opt/python/venv/base/bin/python -c "import torch; print(torch.cuda.is_available())"
+RUN /opt/python3/venv/base/bin/python3 -c "import torch; print(torch.cuda.is_available())"
 
 COPY rencos-master .
 
