--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -1,8 +1,14 @@
 FROM nvidia/cuda:11.2.2-devel-ubuntu20.04
 #FROM nvidia/cuda:12.2.0-devel-ubuntu22.04
 
+
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 
+# Python Version x.y
+ARG PYTHON_VERSION=3
+ARG PYLUCENE_VERSION=7.4.0
+
+RUN nvcc --version
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
@@ -28,10 +34,10 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 		gcc-multilib\
 		libc6 \
 		 && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
-	
 
 
-
+RUN python3 --version
+#RUN python3.6 -m pip install --upgrade Pillow
 
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
@@ -46,11 +52,11 @@ RUN apt-get update && \
     default-jdk
     
 #RUN ls /usr/bin/ | grep "python"
-RUN ln -sf $(which python3) /usr/bin/python
+#RUN ln -sf $(which python$PYTHON_VERSION) /usr/bin/python
 
 #RUN python --version
 
-#RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip
 
 #RUN which python$PYTHON_VERSION && which python && python --version
 
@@ -76,9 +82,9 @@ RUN curl https://archive.apache.org/dist/lucene/pylucene/pylucene-$PYLUCENE_VERS
 ENV PREFIX_PYTHON=/usr \
     JCC_JDK=/usr/lib/jvm/default-java \
     ANT=ant \
-    JCC='python -m jcc' \
+    JCC='python3 -m jcc' \
     NUM_FILES=10 \
-    PYTHON=python \
+    PYTHON=python3 \
     NO_SHARED=1
 	
 
@@ -100,17 +106,17 @@ RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
 
 RUN cd "pylucene-$PYLUCENE_VERSION/jcc" && \
     ls -la && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python setup.py build && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python setup.py install && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py build && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py install && \
     cd .. && \
-    make JCC="python -m jcc" ANT=ant PYTHON=python NUM_FILES=8&& \
-    make install JCC="python -m jcc" ANT=ant PYTHON=python NUM_FILES=8 && \
+    make JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8&& \
+    make install JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8 && \
     cd ../../
 
 
 WORKDIR /usr/src
 RUN rm -rf pylucene
-RUN python -c "import lucene; lucene.initVM()"
+
 
 # ======================== END OF ADDITIONAL INSTALLATION ========================
 
@@ -120,13 +126,22 @@ COPY . .
 WORKDIR /
 
 
-RUN python -m pip install --upgrade pip \
-    && python -m venv /opt/python/venv/base
+
+RUN python3 -m pip install --upgrade pip \
+    && python3 -m venv --system-site-packages /opt/python3/venv/base
+
+
+ENV CONDA_DIR /opt/conda
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda
+
+# Put conda in path so we can use conda activate
+ENV PATH=$CONDA_DIR/bin:$PATH
 	
+RUN /opt/python3/venv/base/bin/python3 -m pip install --upgrade pip	
 
+COPY requirements.txt /opt/python3/venv/base/
 
-COPY requirements.txt /opt/python/venv/base/
-#RUN python3.6 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
 
 COPY rencos-master .
 
