--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -140,7 +140,7 @@ ENV PATH=$CONDA_DIR/bin:$PATH
 	
 RUN /opt/python3/venv/base/bin/python3 -m pip install --upgrade pip	
 
-COPY requirements.txt /opt/python3/venv/base/
+COPY requirements.txt .
 
 
 COPY rencos-master .
