--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -28,9 +28,11 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #RUN rm -rf /usr/local/cuda*
 
 COPY cuda-repo-ubuntu1604_9.2.148-1_amd64.deb .
+COPY 7fa2af80.pub .
+
 
 RUN dpkg -i cuda-repo-ubuntu1604_9.2.148-1_amd64.deb
-RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/7fa2af80.pub
+RUN apt-key add 7fa2af80.pub
 RUN apt-get update
 RUN apt-get -y install cuda
 
