--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -144,6 +144,10 @@ WORKDIR /
 
 RUN python -m pip install --upgrade pip \
     && python -m venv --system-site-packages /opt/python/venv/base
+	
+COPY requirements.txt /opt/python3/venv/base/
+	
+RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
 
 ENV CONDA_DIR /opt/conda
@@ -153,9 +157,7 @@ RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86
 # Put conda in path so we can use conda activate
 ENV PATH=$CONDA_DIR/bin:$PATH
 	
-RUN /opt/python/venv/base/bin/python -m pip install --upgrade pip	
 
-COPY requirements.txt .
 
 
 COPY rencos-master .
