--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -145,7 +145,7 @@ WORKDIR /
 RUN python -m pip install --upgrade pip \
     && python -m venv --system-site-packages /opt/python/venv/base
 	
-COPY requirements.txt /opt/python3/venv/base/
+COPY requirements.txt /opt/python/venv/base/
 	
 RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
