--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -1,4 +1,5 @@
-FROM aaii/cuda:9.2-cudnn7-devel-ubuntu18.04
+cogniac/nvidia-cuda:8.0-cudnn7-devel-ubuntu16.04-20190822
+#FROM aaii/cuda:9.2-cudnn7-devel-ubuntu18.04
 #FROM nvidia/cuda:11.2.2-devel-ubuntu20.04
 #FROM nvidia/cuda:12.2.0-devel-ubuntu22.04
 
