--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -40,10 +40,11 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
-        python3-dev \
+        "python$PYTHON_VERSION-dev" \
+		"python$PYTHON_VERSION-distutils" \
 		python3-setuptools \
         python3-pip \
-        python3-venv \
+        "python$PYTHON_VERSION-venv" \
 		libstdc++6 \
 		gcc-multilib\
 		libc6 \
@@ -70,7 +71,7 @@ RUN ln -sf $(which python$PYTHON_VERSION) /usr/bin/python
 
 #RUN python --version
 
-RUN python3 -m pip install --upgrade pip
+RUN python -m pip install --upgrade pip
 
 #RUN which python$PYTHON_VERSION && which python && python --version
 
@@ -78,8 +79,7 @@ WORKDIR /usr/lib/jvm/default-java/jre/lib
 RUN ln -s ../../lib amd64
 
 # Java 11
-#RUN java --version && javac --version
-RUN java && javac
+RUN java --version && javac --version
 
 
 # Installing PyLucene
@@ -97,9 +97,9 @@ RUN curl https://archive.apache.org/dist/lucene/pylucene/pylucene-$PYLUCENE_VERS
 ENV PREFIX_PYTHON=/usr \
     JCC_JDK=/usr/lib/jvm/default-java \
     ANT=ant \
-    JCC='python3 -m jcc' \
+    JCC='python -m jcc' \
     NUM_FILES=10 \
-    PYTHON=python3 \
+    PYTHON=python \
     NO_SHARED=1
 	
 
@@ -121,11 +121,11 @@ RUN cd "pylucene-$PYLUCENE_VERSION/lucene-java-$PYLUCENE_VERSION/lucene" && \
 
 RUN cd "pylucene-$PYLUCENE_VERSION/jcc" && \
     ls -la && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py build && \
-    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python3 setup.py install && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python setup.py build && \
+    NO_SHARED=1 JCC_JDK=/usr/lib/jvm/default-java python setup.py install && \
     cd .. && \
-    make JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8&& \
-    make install JCC="python3 -m jcc" ANT=ant PYTHON=python3 NUM_FILES=8 && \
+    make JCC="python -m jcc" ANT=ant PYTHON=python NUM_FILES=8&& \
+    make install JCC="python -m jcc" ANT=ant PYTHON=python NUM_FILES=8 && \
     cd ../../
 
 
@@ -142,14 +142,14 @@ WORKDIR /
 
 
 
-RUN python3 -m pip install --upgrade pip \
-    && python3 -m venv --system-site-packages /opt/python3/venv/base
+RUN python -m pip install --upgrade pip \
+    && python -m venv --system-site-packages /opt/python/venv/base
 	
-COPY requirements.txt /opt/python3/venv/base/
+COPY requirements.txt /opt/python/venv/base/
 
-RUN /opt/python3/venv/base/bin/python3 -m pip install -v "torch==0.4.1" -f https://download.pytorch.org/whl/cu92/torch_stable.html
+RUN /opt/python/venv/base/bin/python -m pip install -v "torch==0.4.1" -f https://download.pytorch.org/whl/cu92/torch_stable.html
 	
-RUN /opt/python3/venv/base/bin/python3 -m pip install --no-cache-dir -r /opt/python3/venv/base/requirements.txt
+RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
 
 ENV CONDA_DIR /opt/conda
