--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -51,8 +51,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 		 && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
 
 
-RUN python --version
-RUN python3 --version
+
 #RUN python3.6 -m pip install --upgrade Pillow
 
 
@@ -67,7 +66,9 @@ RUN apt-get update && \
     git \
     default-jdk
     
-#RUN ls /usr/bin/ | grep "python"
+RUN ls /usr/bin/ | grep "python"
+RUN /usr/bin/python --version
+RUN python3 --version
 RUN ln -sf $(which python$PYTHON_VERSION) /usr/bin/python
 
 #RUN python --version
