--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -40,6 +40,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
+		python2.7 \
+		python-pip \
         "python$PYTHON_VERSION-dev" \
 		"python$PYTHON_VERSION-distutils" \
 		python3-setuptools \
@@ -66,9 +68,6 @@ RUN apt-get update && \
     git \
     default-jdk
     
-RUN ls /usr/bin/ | grep "python"
-RUN /usr/bin/python --version
-RUN python3 --version
 RUN ln -sf $(which python$PYTHON_VERSION) /usr/bin/python
 
 #RUN python --version
@@ -142,11 +141,7 @@ COPY . .
 
 WORKDIR /
 
-RUN ls /usr/bin/ | grep "python"
-
-RUN /usr/bin/python2.7/bin/python -m pip install virtualenv
-
-RUN virtualenv -p /usr/bin/python2.7 --distribute temp-python
+RUN ls /usr/bin | grep "python"
 
 RUN python -m pip install --upgrade pip \
     && python -m venv --system-site-packages /opt/python/venv/base
