--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -154,7 +154,7 @@ RUN python -m pip install --upgrade pip \
 	
 COPY requirements.txt /opt/python/venv/base/
 
-RUN ls /usr/bin/python2.7/bin/
+RUN ls /usr/bin/python2.7/
 	
 RUN /opt/python/venv/base/bin/python -m pip install --no-cache-dir -r /opt/python/venv/base/requirements.txt
 
