--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -156,6 +156,9 @@ COPY requirements.txt /opt/python/venv/base/
 
 RUN python2.7 --version
 
+RUN wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
+RUN python2.7 get-pip.py
+
 RUN python2.7 -m pip install -U virtualenv
 
 RUN python2 -m virtualenv --system-site-packages temp-python
