TL-CodeSum added

--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -171,6 +171,7 @@ RUN /opt/python/venv/base/bin/python -m pip install -r /opt/python/venv/base/req
 
 
 COPY rencos-master .
+COPY TL-CodeSum-master .
 
 
 COPY entrypoint.sh /entrypoint.sh
