--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -161,6 +161,8 @@ RUN python2.7 --version
 RUN wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
 RUN python2.7 get-pip.py
 
+RUN rm get-pip.py
+
 RUN python2.7 -m pip install -U virtualenv
 
 RUN python2.7 -m virtualenv --system-site-packages temp-python
