--- a/.github/workflows/rencos-env-cbuild.yml
+++ b/.github/workflows/rencos-env-cbuild.yml
@@ -37,5 +37,5 @@ jobs:
             VERSION=${{ env.VERSION }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          #cache-from: type=gha
+          #cache-to: type=gha,mode=max
